--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,8 @@ margin-right: 50px;
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
+    
     font-family: inherit;
     font-weight: 700;
     letter-spacing: 0.06em;
