--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ margin-right: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
-    
+
     font-family: inherit;
     font-weight: 700;
     letter-spacing: 0.06em;
@@ -590,6 +590,7 @@ border-radius: 0px 0px 4px 4px;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
 }
 
 /* ---------------------------------------------------------CHECKBOX---------------------------------------------------- */
