--- a/css/styles.css
+++ b/css/styles.css
@@ -1037,7 +1037,7 @@ textarea:focus {
 .form-link {
     color: var(--accent-text-color);
 }
-.form-button-text {
+.form-button {
     background-color: var(--accent-text-color);
     color: var(--white-text-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1052,16 +1052,15 @@ textarea:focus {
     padding-bottom: 10px;
     padding-left: 52px;
     padding-right: 52px;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 
-    
-    
     letter-spacing: 0.06em;
     
 }
-.form-button {
-    text-align: center;
-   
-}
+
 .button-send {
     vertical-align: middle;
     margin-left: 10px;
